# fastapi_sqlalchemy_demo

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml  python_project_layouts.md  requirements.txt
app/: config.py  main.py  routing.py
app/admin/: views.py
app/api/: account.py  auth.py  background.py  files.py  param_examples.py  streaming.py  users.py
app/apps/accounts/: deps.py  router.py
app/apps/examples/: router.py
app/apps/file_manager/: __init__.py  config.py  (+3 more)
app/common/: config.py  db.py  exception_handlers.py  logging.py  middleware.py  utils.py
app/core/: db.py  exception_handlers.py  exceptions.py  logging.py  middleware.py  password.py  token.py
app/models/: user.py
app/schemas/: __init__.py  user.py
app/services/: account.py  auth.py
fastapi-sqlalchemy/: adminsite.py  config.py  main.py  model.py  models.py  schema.py  utils.py
fastapi-sqlalchemy/api/: arg_demo.py  auth.py  docs.py  tree.py
fastapi-sqlalchemy/core/: password.py  token.py
fastapi-sqlalchemy/migrations/: README.md  env.py
fastapi-sqlalchemy/response/: __init__.py  exceptions.py
fastapi-sqlalchemy/routers/: api.py  docs.py
fastapi-sqlalchemy/t/: adduser.py
fastapi-sqlalchemy/test/: adduser.py
fastapi_sqlalchemy/: adminsite.py  config.py  exception_handlers.py  exceptions.py  logging_config.py  main.py  model.py  schema.py  utils.py
fastapi_sqlalchemy/admin/: views.py
fastapi_sqlalchemy/api/: account.py  arg_demo.py  auth.py  docs.py  param_examples.py
fastapi_sqlalchemy/core/: __init__.py  config.py  exception_handlers.py  logging.py  password.py  token.py
fastapi_sqlalchemy/models/: __init__.py  user.py
fastapi_sqlalchemy/response/: __init__.py  exceptions.py  generic.py
fastapi_sqlalchemy/schemas/: __init__.py  account.py  response.py  user.py
k8s/: README.md  code-pvc.yaml  deployment.yaml  kustomization.yaml
k8s/patch/: README-patch.md  code-pvc.yaml  unmount-only.yaml  unvolume-only.yaml  volume-patch.yaml
migrations/: README.md  ensure_db.py  env.py  mysql-sqlalchemy-multistatement-notes.md
migrations/versions/: 065d9696fad1_.py  7b8d0b89d2e1_rename_user_balance_to_energy.py  c4d3a1f6b2e0_make_user_energy_not_null.py
python/: .env  api.py  db.py  main.py  models.py  pagination.py  schemas.py  settings.py  utils.py
python/dependencies/: README.md  __init__.py  authorization.py  db.py
python/migrations/: README.md  env.py
python/response/: __init__.py  base.py  generic.py
python/routers/: api.py  auth.py  docs.py
python/t/: adduser.py
static/: sample.txt
tests/: adduser.py  conftest.py  test_account.py  test_user.py
tests/integration/: conftest.py  helpers.py  test_account.py  test_account_service.py  test_app.py  test_app_exception_handlers.py  test_app_logging.py  test_auth.py  test_openapi_error_responses.py  test_pagination.py  test_param_examples.py  test_password_hash.py  test_password_length_validation.py  test_recent_fastapi_examples.py  test_restful_users.py  test_static_files.py
tests/unit/: test_account_schema.py  test_admin_auth.py  test_auth_deps.py  test_auth_service.py  test_config.py  test_cors_with_unhandled_exception.py  test_db_session.py  test_error_response_schema.py  test_exception_handlers.py  test_exceptions.py  test_files_api.py  test_log_request_decorator.py  test_logging.py  test_password.py  test_project_structure.py  test_response.py  test_token.py
(+63 files in other folders)
