[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "fastapi[standard]>=0.129.1",
    "passlib>=1.7.4",
    "itsdangerous>=2.2.0",
    "python-jose[cryptography]>=3.5.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "loguru>=0.7.3",
    "uvicorn[standard]>=0.42.0",
    "uvicorn-worker>=0.4.0",
    "gunicorn>=25.3.0",
    "sqladmin>=0.23.0",
    "alembic>=1.18.4",
    "sqlalchemy[asyncio]>=2.0.48",
    "asyncpg >=0.31.0",
    "psycopg[binary]>=3.3.3",
    "pymysql >=1.1.2,<2.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-s"
asyncio_mode = "auto"
pythonpath = "."
#testpaths = ["tests"]

[dependency-groups]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple/"
default = true

[tool.ruff.lint]
ignore = ["F405"]

[tool.black]
line-length = 120
