[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "passlib>=1.7.4",
    "itsdangerous>=2.2.0",
    "python-jose[cryptography]>=3.5.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "loguru>=0.7.3",
    "rich>=15.0.0",
    "uvicorn[standard]>=0.46.0",
    "uvicorn-worker>=0.4.0",
    "gunicorn>=25.3.0",
    "sqladmin>=0.25.0",
    "alembic>=1.18.4",
    "sqlalchemy[asyncio]>=2.0.48",
    "asyncpg >=0.31.0",
    "psycopg[binary,pool]>=3.3.3",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-s"
asyncio_mode = "auto"
pythonpath = "."
#testpaths = ["tests"]

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1"
]

[tool.ruff]
line-length = 120
[tool.ruff.lint]
ignore = ["F405"]

[tool.black]
line-length = 120
skip-string-normalization = true
